--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseno Web Responsivo - Cartoon Network Style</title>
-	<link rel="stylesheet" href="main.css">
+    <title>Diseno Web Responsivo</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="presentation-container">
@@ -216,7 +216,9 @@
     <footer class="footer">
         Jeffrey Bustamante - Actividad 3 - Presentación Formato Animación - SENA
     </footer>
-
+    
+	<!-- ===== JAVASCRIPT ===== -->
+    <script src="main.js" defer></script>
  
 </body>
 </html>
