--- a/index.html
+++ b/index.html
@@ -186,17 +186,12 @@
 	<!-- Escena 8: Introducción -->
 <div class="scene active" id="scene8">
     <div class="presentation-box"> <!-- Caja principal de contenido -->
-        <p class="presentation-text">- Diseño y desarrollo de presentación animada en HTML, CSS, JS por: Jeffrey Duarte</p>
+        <p class="presentation-text">- Diseño y desarrollo de presentación animada en HTML, CSS, JS por: Jeffrey Bustamante</p>
         <p class="presentation-text">- Curso SENA: Adobe con Dreamweaver.</p>
         <p class="presentation-text">- Actividad Semana 3 - AP03 - 2025 SENA. 🌟</p>
     </div>
 </div>
-		
-		
-		
-		
-		
-		
+
 		
         <!-- Puntos de navegación -->
         <div class="nav-dots">
